err/nosqldb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nosqldb'...
Listing './lib/python3.5/site-packages/nosqldb/kvproxy'...
Listing './lib/python3.5/site-packages/nosqldb/kvproxy/doc'...
Listing './lib/python3.5/site-packages/nosqldb/kvproxy/lib'...
Compiling './lib/python3.5/site-packages/nosqldb/nosqldb.py'...
***   File "./lib/python3.5/site-packages/nosqldb/nosqldb.py", line 351
    except Thrift.TException, tx:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nosqldb/oracle'...
Listing './lib/python3.5/site-packages/nosqldb/oracle/kv'...
Listing './lib/python3.5/site-packages/nosqldb/oracle/kv/proxy'...
Listing './lib/python3.5/site-packages/nosqldb/oracle/kv/proxy/gen'...
Listing './lib/python3.5/site-packages/nosqldb-4.5.11.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './lib/python3.5/site-packages/thrift-0.11.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
